Fix for crisper rendering of rules (align stroke to device pixels).

--- a/charts/power-io/power-io.css
+++ b/charts/power-io/power-io.css
@@ -174,7 +174,7 @@ svg {
 
 .chart g.rule line {
 	stroke: black;
-	opacity: 0.2;
+	opacity: 0.1;
 }
 
 .chart g.rule line.origin {
